started on observers and changed js structure

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/product.css">
     <link rel="stylesheet" type="text/css" href="/css/advert.css">
+    <script src="index.js" ></script>
 </head>
 
 <body ceddl-observe="page"
   data-section="home demo"
-  data-framework="loDash"
-  ceddl-page-ready="page_metadata cart products">
+  data-framework="loDash">
 
 <section style="padding-bottom: 0;" class="section">
     <div class="container">
@@ -109,9 +109,9 @@
                                   <img src="/img/ad.jpg" alt="ziggo bennefits"/>
                                 </div>
                                 <div ceddl-observe="advertiser" data-id="1920_5ah13" data-name="Google AdWords Conversion" class="ad-content">
-                                  <h3>Non-stop gratis extra's</h3>
+                                  <h3>Your Add</h3>
                                   <p>
-                                  Heb je een Vodafone en Ziggo abonnement? Dan ontvang je non-stop gratis extra’s! Elke maand weer.
+                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit
                                   </p>
                                 </div>
                               </div>
@@ -285,13 +285,11 @@
     </div>
 </script>
 
-
-<script async src="index.js" ></script>
-<script async src="js/demo.models.js"></script>
 <script src="js/lodash.js" ></script>
 <script src="js/cart.js" ></script>
 <script src="js/products.js" ></script>
 <script src="js/app.js" ></script>
+<script async src="js/demo.models.js"></script>
 
 </body>
 
