loggin now improved and added to eventbus to prevent circular dependancy

--- a/demo/index.html
+++ b/demo/index.html
@@ -158,7 +158,7 @@
     <div class="container-item" subscriptiontype="<%= subscription_type %>"
         ceddl-observe="product"
         ceddl-click="addtocart"
-        data-sale2="<%= sale?true:false %>"
+        data-sale="<%= sale?true:false %>"
         data-name="<%= name %>"
         data-short-name="<%= short_name %>"
         data-price-once="<%= price_once %>"
