adding license info and code of conduct

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body ceddl-observe="page"
-  data-section="home demo"
+  data-section="ceddl demo"
   data-framework="loDash"
   data-page-ready="pageMetadata products">
 
